增加:更新字段，适配前端
